--- a/Configurator/Configurator.csproj
+++ b/Configurator/Configurator.csproj
@@ -26,6 +26,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="ConsoleTables" Version="2.4.2" />
         <PackageReference Include="Microsoft.CodeAnalysis.Common" Version="3.4.0" />
         <PackageReference Include="Microsoft.Extensions.Configuration" Version="5.0.0" />
         <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="5.0.0" />
