--- a/Configurator/Configurator.csproj
+++ b/Configurator/Configurator.csproj
@@ -2,8 +2,7 @@
 
     <PropertyGroup>
         <OutputType>Exe</OutputType>
-        <TargetFramework>netcoreapp3.1</TargetFramework>
-        <LangVersion>8.0</LangVersion>
+        <TargetFramework>net6.0</TargetFramework>
         <nullable>enable</nullable>
 
         <NoWarn>1701;1702;1591;8618</NoWarn>
