Add NonNuGetDependencies folder to build include paths

--- a/.github/workflows/ConfiguratorCI.yml
+++ b/.github/workflows/ConfiguratorCI.yml
@@ -5,11 +5,13 @@ on:
     branches: [ main ]
     paths:
       - 'Configurator*/**'
+      - 'NonNuGetDependencies/**'
       - '.github/workflows/ConfiguratorCI.yml'
   pull_request:
     branches: [ main ]
     paths:
       - 'Configurator*/**'
+      - 'NonNuGetDependencies/**'
       - '.github/workflows/ConfiguratorCI.yml'
 
 jobs:
