Fix serialization when saving installables to ManifestRepository_V2

--- a/Configurator.IntegrationTests/Configurator.IntegrationTests.csproj
+++ b/Configurator.IntegrationTests/Configurator.IntegrationTests.csproj
@@ -127,6 +127,9 @@
       <None Update="TestManifests\script.manifest.json">
         <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       </None>
+      <None Update="TestManifests\test.manifest.json">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
       <None Update="TestManifests\visual-studio-extension.manifest.json">
         <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       </None>
