ManifestRepository_V2 can load single app Renamed multiple-apps.manifest.json from environments.manifest.json

--- a/Configurator.IntegrationTests/Configurator.IntegrationTests.csproj
+++ b/Configurator.IntegrationTests/Configurator.IntegrationTests.csproj
@@ -106,7 +106,7 @@
       <None Update="TestManifests\apps\winget-app-id-with-prevent-upgrade\app.json">
         <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       </None>
-      <None Update="TestManifests\environments.manifest.json">
+      <None Update="TestManifests\multiple-apps.manifest.json">
         <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       </None>
       <None Update="TestManifests\gitconfig.manifest.json">
