--- a/Configurator.IntegrationTests/Configurator.IntegrationTests.csproj
+++ b/Configurator.IntegrationTests/Configurator.IntegrationTests.csproj
@@ -31,6 +31,9 @@
       <None Update="TestManifests\apps\environment-1-and-3-app-id-3\app.json">
         <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       </None>
+      <None Update="TestManifests\apps\powershell-app-id-1\app.json">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
       <None Update="TestManifests\apps\unknown-app-id\app.json">
         <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       </None>
@@ -110,6 +113,9 @@
         <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       </None>
       <None Update="TestManifests\gitconfig.manifest.json">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
+      <None Update="TestManifests\powershell.manifest.json">
         <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       </None>
       <None Update="TestManifests\non-package.manifest.json">
